--- a/kadai_015/kadai_015.css
+++ b/kadai_015/kadai_015.css
@@ -1,38 +1,44 @@
-html{
-  body {
-    font-family: "Arial", "Meiryo", sans-serif;
-    font-size: 20px;
-    text-align: center;
-    h1 {
-      font-family: "Josefin Sans", sans-serif;
-      font-size: 2rem;
-      border-bottom: solid 3px rgb(115, 115, 114);
-      text-shadow: 1px 2px 3px gray;
-      .blue{
-        color:skyblue;
-      }
-      .pink{
-        color:rgb(255, 192, 203);
-      }
-      letter-spacing: 1.2em;
-    }
-    #basic {
-      >p{
-        font-weight: bold;
-      }
-      .blue{
-        color:skyblue;
-      }
-      .pink{
-        color:rgb(255, 192, 203);
-      }
-    }
-    .blue{
-      color:skyblue
-    }
-    .pink{
-      color:rgb(255, 192, 203);
-    }
-  }
+html {
 }
 
+body {
+  font-family: "Arial", "Meiryo", sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 2rem;
+  border-bottom: solid 3px rgb(115, 115, 114);
+  text-shadow: 1px 2px 3px gray;
+  letter-spacing: 1.2em;
+}
+
+h1 .blue {
+  color: skyblue;
+}
+
+h1 .pink {
+  color: rgb(255, 192, 203);
+}
+
+#basic > p {
+  font-weight: bold;
+}
+
+#basic .blue {
+  color: skyblue;
+}
+
+#basic .pink {
+  color: rgb(255, 192, 203);
+}
+
+.blue {
+  color: skyblue;
+}
+
+.pink {
+  color: rgb(255, 192, 203);
+}
